--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.17.1",
     "next": "15.4.6",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^3.10.111",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
